# Service_Twitter

./: pyproject.toml
src/sciuromorpha_service_twitter/: config.py  exceptions.py  service.py  static.py
src/sciuromorpha_service_twitter/api/: twitter.py
src/sciuromorpha_service_twitter/http/: twitter.py
