[tool.poetry]
name = "sciuromorpha-service-twitter"
version = "0.1.0"
description = ""
authors = ["Whale Mo <ncwhale@gmail.com>"]
readme = "README.readme.md"
packages = [{include = "sciuromorpha_service_twitter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
